# input-relay

./: .gitignore  Cargo.toml  README.md  components.json  grill-me-report.md  package.json  pnpm-lock.yaml  project-brief.html  turbo.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/phone-web/: index.html  package.json  vite.config.ts
apps/phone-web/src/: App.tsx  main.tsx  styles.css
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: backend.rs  keychain.rs  main.rs  network.rs  storage.rs  util.rs
docs/: mock-milestone.md
scripts/: check-linux-kde-wayland.sh  dev-mock.sh  install-cachyos-kde-wayland.sh  stop-dev.sh
