[package]
name = "input-relay-service"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util.workspace = true
input-relay-protocol = { path = "../protocol" }
dirs = "6"
evdev = "0.13.2"
parking_lot.workspace = true
# Prototype builds bundle SQLCipher/OpenSSL so encrypted storage works without
# system package setup; revisit feature-gating before publishing binaries.
rusqlite = { version = "0.40.1", features = ["bundled-sqlcipher-vendored-openssl"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
